# ani

./: .gitignore  .markdownlint.jsonc  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
ani/: Cargo.toml
ani-cli/: Cargo.toml
ani-cli/src/: main.rs
ani-gui/: Cargo.toml
ani-gui/src/: main.rs
ani/src/: main.rs
src/: runner.rs
src/lib/: init.rs
