[package]
name = "ani"
version = "0.0.1"
edition = "2021"
description = "streamer/downloader inspired by animdl, anime-downloader and anicli"

[lib]
name = "ani"
path = "src/bin/ani/*"

[[bin]]
name = "ani"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human-panic = "1.0.3"
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.6", features = ["json"] }
select = "0.6.0"
egui = "0.20.1"
eframe = "0.20.1"
tracing-subscriber = "0.3.1"
https = "1.12.5"
yaml-rust = "0.4.5"
